<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".frmCadastro">

    <Toolbar
        android:id="@+id/toolbar_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_assinatura"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_margin="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crie_sua_conta"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/cad_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_cadastro"
        android:padding="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/e_mail"
        android:textColorHint="@color/cinza"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:textColor="@color/cinza"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/cad_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_cadastro"
        android:padding="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/senha"
        android:textColorHint="@color/cinza"
        android:maxLines="1"
        android:inputType="numberPassword"
        android:textColor="@color/cinza"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/btn_Cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:textSize="18sp"
        android:textStyle="bold"
        android:backgroundTint="@color/red"
        android:padding="15dp"
        android:layout_margin="20dp"
        />

    <TextView
        android:id="@+id/mensagem_erro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />


</LinearLayout>