<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".frmLogin"
    >

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:navigationIcon="@drawable/ic_netflix_official_logo"
        android:layout_marginStart="20dp"
        />
    <!--
    android:background="@drawable/edit_text_login"  criar as bordas arredondadas
    android:maxLines="1"                            numero maximo de linhas
    android:inputType="textEmailAddress"            tipo de teclado
    android:inputType="numberPassword"              teclado numerico para senha
    app:strokeColor="@color/white"                  criando a borda do botao entrar
    app:strokeWidth="2dp"                           espessura da borda
    app:cornerRadius="10dp"                         arredondar botao

    -->


    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:background="@drawable/edit_text_login"
        android:padding="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/e_mail"
        android:textColorHint="@color/white"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/edit_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_login"
        android:padding="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/senha"
        android:textColorHint="@color/white"
        android:maxLines="1"
        android:inputType="numberPassword"
        android:textColor="@color/white"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/m_erro_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/laranja"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        />

    <Button
        android:id="@+id/bt_entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_entrar"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:backgroundTint="@color/black"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        app:cornerRadius="10dp"
        android:padding="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precisa_de_ajuda"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/txt_tela_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/novo_por_aqui_inscreva_se_agora"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"

        />

</LinearLayout>